--- a/FootballMatchSimulator/UI/PersonalArea.xaml
+++ b/FootballMatchSimulator/UI/PersonalArea.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FootballMatchSimulator.UI"
         mc:Ignorable="d"
-        Title="PersonalArea" Height="406" Width="600" WindowStartupLocation="CenterScreen" ResizeMode="NoResize" Icon="/FootballMatchSimulator;component/Img/icons/icon.png" WindowStyle="None">
+        Title="PersonalArea" Height="406" Width="600" WindowStartupLocation="CenterScreen" Icon="/FootballMatchSimulator;component/Img/icons/icon.png" WindowStyle="None" ResizeMode="NoResize">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="36"></RowDefinition>
@@ -34,16 +34,28 @@
                 <Button Name="powerBtn" Width="20" Height="20" Margin="0 0 8 0" BorderBrush="{x:Null}" Foreground="#ffffff" Click="powerBtn_Click"></Button>
             </StackPanel>
         </StackPanel>
-        <Label Grid.Row="1" Grid.Column="0" FontFamily="Yu Gothic UI Semibold" FontSize="22" Foreground="#000000" VerticalAlignment="Center" Margin="28 0 0 0">
-            <Label.Effect>
-                <DropShadowEffect Direction="318" Color="#FFA3DFCC" BlurRadius="10"/>
-            </Label.Effect> Number of wins:</Label>
-        <Label Grid.Row="1" Grid.Column="1" FontFamily="Yu Gothic UI Semibold" FontSize="22" Foreground="#000000" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0 0 10 0">
-            <Label.Effect>
-                <DropShadowEffect Direction="318" Color="#FFA3DFCC" BlurRadius="10"/>
-            </Label.Effect> Player:</Label>
-        <ListBox Grid.Row="2" Grid.Column="0" Margin="30" FontFamily="Yu Gothic UI Semibold" FontSize="18" Foreground="#FF483939" Background="#FFC3EEC3" Opacity="0.75"></ListBox>
-        <Button Grid.Row="2" Grid.Column="1"  MinWidth="120" Cursor="Hand" Height="50" Margin="70,0,70,0" BorderBrush="{x:Null}" FontFamily="Yu Gothic UI Semibold" FontSize="18" Background="#FFF69595" Foreground="Black">
+        <StackPanel Grid.Row="1" Grid.ColumnSpan="2" Orientation="Horizontal">
+            <Label FontFamily="Yu Gothic UI Semibold" FontSize="22" Foreground="#000000" VerticalAlignment="Center" Margin="28 0 0 0">
+                <Label.Effect>
+                    <DropShadowEffect Direction="318" Color="#FFA3DFCC" BlurRadius="10"/>
+                </Label.Effect> Number of wins: 
+            </Label>
+            <Label Content="{Binding Player.NumberOfWins}" FontFamily="Yu Gothic UI Semibold" FontSize="22" Foreground="#000000" VerticalAlignment="Center" Margin="6 0 0 0">
+                <Label.Effect>
+                    <DropShadowEffect Direction="318" Color="#FFA3DFCC" BlurRadius="10"/>
+                </Label.Effect>
+            </Label>
+            <Label Content="{Binding Name}" FontFamily="Yu Gothic UI Semibold" FontSize="22" Foreground="#000000" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="220 0 0 0">
+                <Label.Effect>
+                    <DropShadowEffect Direction="318" Color="#FFA3DFCC" BlurRadius="10"/>
+                </Label.Effect>
+            </Label>
+        </StackPanel>
+       
+        <ListBox ItemsSource="{Binding Matches}" Grid.Row="2" Grid.Column="0" Margin="30" FontFamily="Yu Gothic UI Semibold" FontSize="18" Foreground="#FF483939" Background="#FFC3EEC3" Opacity="0.75">
+
+        </ListBox>
+        <Button Command="{Binding StartPlayGame}" Grid.Row="2" Grid.Column="1"  MinWidth="120" Cursor="Hand" Height="50" Margin="70,0,70,0" BorderBrush="{x:Null}" FontFamily="Yu Gothic UI Semibold" FontSize="18" Background="#FFF69595" Foreground="Black">
             <Button.Effect>
                 <DropShadowEffect BlurRadius="8" Color="#FF908181"/>
             </Button.Effect>
