--- a/FootballMatchSimulator/UI/PersonalArea.xaml
+++ b/FootballMatchSimulator/UI/PersonalArea.xaml
@@ -45,14 +45,14 @@
                     <DropShadowEffect Direction="318" Color="#FFA3DFCC" BlurRadius="10"/>
                 </Label.Effect>
             </Label>
-            <Label Content="{Binding Name}" FontFamily="Yu Gothic UI Semibold" FontSize="22" Foreground="#000000" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="220 0 0 0">
+            <Label Content="{Binding Name}" FontFamily="Yu Gothic UI Semibold" FontSize="26" Foreground="Red" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="220 0 0 0">
                 <Label.Effect>
                     <DropShadowEffect Direction="318" Color="#FFA3DFCC" BlurRadius="10"/>
                 </Label.Effect>
             </Label>
         </StackPanel>
        
-        <ListBox ItemsSource="{Binding Matches}" Grid.Row="2" Grid.Column="0" Margin="30" FontFamily="Yu Gothic UI Semibold" FontSize="18" Foreground="#FF483939" Background="#FFC3EEC3" Opacity="0.75">
+        <ListBox ItemsSource="{Binding Matches}" Grid.Row="2" Grid.Column="0" Margin="30,30,0,30" FontFamily="Yu Gothic UI Semibold" FontSize="18" Foreground="#FF483939" Background="#FFC3EEC3" Opacity="0.75">
 
         </ListBox>
         <Button Command="{Binding StartPlayGame}" Grid.Row="2" Grid.Column="1"  MinWidth="120" Cursor="Hand" Height="50" Margin="70,0,70,0" BorderBrush="{x:Null}" FontFamily="Yu Gothic UI Semibold" FontSize="18" Background="#FFF69595" Foreground="Black">
